mudou quase nada

--- a/Pagina/ihm.html
+++ b/Pagina/ihm.html
@@ -9,7 +9,7 @@
     <title>Interface Homem Máquina</title>
     
     <style type="text/css">
-        .tg  {border-collapse:collapse;border-spacing:20px;display:inline-block}
+        .tg  {border-collapse:collapse;border-spacing:2px;display:inline-block}
         .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
         overflow:hidden;padding:10px 5px;word-break:normal;}
         .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
@@ -30,13 +30,12 @@
     <button type="button">
         Malha aberta/Malha fechada
     </button>
-
-    <br><br><br>
-
-    <br>
+    
+    <br><br>
 
     <div class="alinhamento">
         <ul>
+            <li>
                 <table class="tg">
                     <thead>
                     <tr>
@@ -185,13 +184,43 @@
                         <td class="tg-0pky"></td>
                         <td class="tg-0pky"></td>
                     </tr>
+                    <tr>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                    </tr>
+                    <tr>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                    </tr>
+                    <tr>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                    </tr>
+                    <tr>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                    </tr>
+                    <tr>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                        <td class="tg-0pky"></td>
+                    </tr>
+
                     </tbody>
                 </table>
             </li>
+
             <li>
-                <div class="box">
-                </div>
-            <li>
+                <div class="box"></div>
             </li>
         </ul>
     </div>
